--- a/Practice/index.html
+++ b/Practice/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vue Practice</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="assets/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
     <div class="container">
@@ -32,7 +32,7 @@
         </div>
     </div>
 
-    <script src="https://unpkg.com/vue@next"></script>
-    <script src="main.js"></script>
+    <script src="assets/vue3.js"></script>
+    <script src="assets/main.js"></script>
 </body>
 </html>
