--- a/Ticket/index.html
+++ b/Ticket/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bus Ticket</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+  <link href="assets/bootstrap.min.css">
+  <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
     <div class="container">
-        <h1 class="text-center mt-3">Ticket Booking App</h1>
+        <h1 class="text-center mt-3" style="text-align: center;"> Ticket Booking App</h1>
         <hr>
         <div id="app">
             <div class="ticket-app">
@@ -145,7 +145,7 @@
         </div>
     </div>
 
-    <script src="https://unpkg.com/vue@next"></script>
-    <script src="main.js"></script>
+    <script src="assets/vue3.js"></script>
+    <script src="assets/main.js"></script>
 </body>
 </html>
